[tool.poetry]
name = "talk-gpt"
version = "0.1.0"
description = ""
authors = ["Lucas França <https://github.com/lucasfrancaid>"]
readme = "README.md"
packages = [{include = "talk_gpt"}]

[tool.poetry.scripts]
talk_gpt = "talk_gpt.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
gtts = "^2.3.2"
ffprobe = "^0.5"
pydub = "^0.25.1"
speechrecognition = "^3.10.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
ipython = "^8.14.0"
pydantic = {version = "<2.0.0", extras = ["dotenv"]}
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
